--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+# Database
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3400/mindfruit-posts-db
 spring.datasource.username=root
@@ -5,5 +6,10 @@ spring.datasource.password=aKk78564Uwkq4Mv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+# RSA
+rsa.private-key=classpath:certs/private.pem
+rsa.public-key=classpath:certs/public.pem
+
+# External api url
 json-placeholder.api.url.users=https://jsonplaceholder.typicode.com/users/
 json-placeholder.api.url.posts=https://jsonplaceholder.typicode.com/posts/
