feat: processing third party api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=root
 spring.datasource.password=aKk78564Uwkq4Mv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+
+json-placeholder.api.url.users=https://jsonplaceholder.typicode.com/users/
+json-placeholder.api.url.posts=https://jsonplaceholder.typicode.com/posts/
