--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Spring
+# SPRING
 server.servlet.context-path=/api/v1
 
-# Database
+# DATABASE
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3400/mindfruit-posts-db
 spring.datasource.username=root
@@ -9,10 +9,20 @@ spring.datasource.password=aKk78564Uwkq4Mv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
+# SWAGGER
+springdoc.api-docs.path=/api-docs
+springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.defaultModelsExpandDepth=-1
+api.version=v0.1
+api.title=Mindfruit API
+api.description=Welcome to Mindfruit API! Our API lets you share your ideas with the world through Mindfruit \
+   - the platform for cultivating your thoughts. With Mindfruit API, you can create, edit, and publish your ideas, \
+   collaborate with others, and reach a wider audience. Get started today and see your ideas bear fruit!
+
 # RSA
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
 
-# External api url
+# EXTERNAL API URL
 json-placeholder.api.url.users=https://jsonplaceholder.typicode.com/users/
 json-placeholder.api.url.posts=https://jsonplaceholder.typicode.com/posts/
