--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql: true
 
 # SWAGGER
 springdoc.api-docs.path=/api-docs
-springdoc.swagger-ui.operationsSorter=alpha
+springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.defaultModelsExpandDepth=-1
 api.version=v0.1
 api.title=Mindfruit API
