--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>mindfruit</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mindfruit</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Mindfruit REST API</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -81,8 +81,6 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
 		</dependency>
-
-
     </dependencies>
 
     <build>
