--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 # SPRING
 server.servlet.context-path=/api/v1
+server.port=8080
 
 # DATABASE
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3400/mindfruit-posts-db
 spring.datasource.username=root
 spring.datasource.password=aKk78564Uwkq4Mv
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
